# CustomAiomysql

./: .gitignore  README.md  caiomysql.py  pyproject.toml  requirements.txt  shell.py  shell.pyd  test.py
Caiosql/: Caiosql.py  __init__.py
Config/: configdb.cfg
